@@ -1,4 +1,4 @@
 /*
-Package kubernetes is a Metricbeat module that contains MetricSets.
+Package kubelet is a Metricbeat module that contains MetricSets.
 */
 package kubelet
